Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,13 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "roll_dice = None"
+    "roll_dice = set([1,2,3,4,5,6])\n",
+    "# type(roll_dice)\n",
+    "roll_dice"
    ]
   },
   {
@@ -48,13 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5, 6}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "event = None"
+    "event = set([5,6])\n",
+    "event"
    ]
   },
   {
@@ -66,13 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = len(event)/len(roll_dice)\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
@@ -95,14 +125,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "np.random.randint(1,7) # you will get a random value between 1 and 6. See how it changes when you rerun"
+    "np.random.randint(1,7) \n",
+    "# you will get a random value \n",
+    "# between 1 and 6. See how it changes when you return"
    ]
   },
   {
@@ -115,18 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(12345) # to make sure there is no randomness\n",
     "\n",
-    "dice_10 = np.random.randint(1,7,size= None)\n",
-    "dice_1k = np.random.randint(1,7,size= None)\n",
-    "dice_1m = np.random.randint(1,7,size=None)\n",
-    "dice_100m = np.random.randint(1,7,size=None)"
+    "dice_10 = np.random.randint(1,7,size= 10)\n",
+    "dice_1k = np.random.randint(1,7,size= 1000)\n",
+    "dice_1m = np.random.randint(1,7,size=100_000)\n",
+    "dice_100m = np.random.randint(1,7,size=100_000_000)"
    ]
   },
   {
@@ -138,16 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "event_10 = None\n",
-    "event_1k = None\n",
-    "event_1m = None\n",
-    "event_100m = None"
+    "event_10 = np.sum(dice_10>4) \n",
+    "event_1k = np.sum(dice_1k>4)\n",
+    "event_1m = np.sum(dice_1m>4)\n",
+    "event_100m = np.sum(dice_100m>4)"
    ]
   },
   {
@@ -159,16 +196,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5, 0.331, 0.33401, 0.33329786)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_10 = None\n",
-    "prob_1k = None\n",
-    "prob_1m = None\n",
-    "prob_100m = None\n",
+    "prob_10 = event_10/10\n",
+    "prob_1k = event_1k/1000\n",
+    "prob_1m = event_1m/100000\n",
+    "prob_100m = event_100m/100000000\n",
     "prob_10, prob_1k, prob_1m, prob_100m  # 0.5 0.331 0.333657 0.33329752"
    ]
   },
@@ -197,19 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "P_afr = None\n",
-    "P_ant = None\n",
-    "P_as = None\n",
-    "P_eur = None\n",
-    "P_na = None\n",
-    "P_aus = None\n",
-    "P_sa = None"
+    "P_afr = 0.161\n",
+    "P_ant = 0.000\n",
+    "P_as = 0.598\n",
+    "P_eur = 0.10\n",
+    "P_na = 0.079\n",
+    "P_aus = 0.005\n",
+    "P_sa = 0.057"
    ]
   },
   {
@@ -221,11 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.161 0.    0.598 0.1   0.079 0.005 0.057]\n"
+     ]
+    }
+   ],
    "source": [
     "continents = np.array([P_afr, P_ant, P_as, P_eur, P_na, P_aus, P_sa])\n",
     "print(continents)"
@@ -248,14 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
-    "    None"
+    "    axiom_1_a = (sample_space >=0).all()\n",
+    "    axiom_1_b = (sample_space <=1).all()\n",
+    "    axiom_2 = np.sum(sample_space) == 1\n",
+    "    if axiom_1_a and axiom_1_b and axiom_2:\n",
+    "        return '''We're good!''' \n",
+    "    else: \n",
+    "        return '''Not quite!'''"
    ]
   },
   {
@@ -267,11 +321,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"We're good!\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "check_axioms(continents)"
    ]
@@ -285,10 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_1 = np.array([0.05, 0.2, 0.3, 1.01])\n",
@@ -298,15 +359,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Not quite!'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
-    "None\n",
-    "None"
+    "check_axioms(test_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Not quite!'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_axioms(test_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Not quite!'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_axioms(test_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.613"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array([0.043,0.05,.02,0.3,0.2]))"
    ]
   },
   {
@@ -324,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,13 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36, 2)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # should be equal to (36,2)"
+    "sample_dice.shape # should be equal to (36,2)"
    ]
   },
   {
@@ -394,13 +531,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "set_5 = None # Your output should be shape (36, 2) but with booleans instead of numbers"
+    "set_5 = sample_dice == (5) \n",
+    "# set_5\n",
+    "\n",
+    "# Your output should be shape (36, 2) but with booleans instead of numbers"
    ]
   },
   {
@@ -418,7 +556,7 @@
    },
    "outputs": [],
    "source": [
-    "true_5 = None # Your output should be shape (36,) and have booleans. \n",
+    "true_5 =  # Your output should be shape (36,) and have booleans. \n",
     "              # \"True\" if at least one of the previous pairs was true. Tip: use np.any()\n",
     "print(true_5)"
    ]
@@ -438,7 +576,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5 = None\n",
+    "prob_5 = \n",
     "print(prob_5)"
    ]
   },
@@ -540,35 +678,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sample_mf= None"
+    "sample_mf= np.array([(\"M\",\"M\",\"M\",\"F\",\"F\",\"F\"), (\"M\",\"M\",\"F\",\"M\",\"F\",\"F\"), (\"M\",\"M\",\"F\",\"F\",\"M\",\"F\"),\n",
+    "                     (\"M\",\"M\",\"F\",\"F\",\"F\",\"M\"), (\"M\",\"F\",\"M\",\"M\",\"F\",\"F\"), (\"M\",\"F\",\"M\",\"F\",\"F\",\"M\"),\n",
+    "                     (\"M\",\"F\",\"M\",\"F\",\"M\",\"F\"), (\"M\",\"F\",\"F\",\"M\",\"F\",\"M\"), (\"M\",\"F\",\"F\",\"M\",\"M\",\"F\"),\n",
+    "                     (\"M\",\"F\",\"F\",\"F\",\"M\",\"M\"), (\"F\",\"F\",\"F\",\"M\",\"M\",\"M\"), (\"F\",\"F\",\"M\",\"F\",\"M\",\"M\"), \n",
+    "                     (\"F\",\"F\",\"M\",\"M\",\"F\",\"M\"), (\"F\",\"F\",\"M\",\"M\",\"M\",\"F\"), (\"F\",\"M\",\"F\",\"F\",\"M\",\"M\"),\n",
+    "                     (\"F\",\"M\",\"F\",\"M\",\"M\",\"F\"), (\"F\",\"M\",\"F\",\"M\",\"F\",\"M\"), (\"F\",\"M\",\"M\",\"F\",\"M\",\"F\"),\n",
+    "                     (\"F\",\"M\",\"M\",\"F\",\"F\",\"M\"), (\"F\",\"M\",\"M\",\"M\",\"F\",\"F\") ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 6)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # get the shape of sample_mf"
+    "sample_mf.shape # get the shape of sample_mf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_length= None\n",
+    "sample_length=(len(sample_mf))\n",
     "print(sample_length)"
    ]
   },
@@ -583,49 +740,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "first_3_F = None\n",
-    "None"
+    "first_3_F = sample_mf[:,:3]=='F'\n",
+    "# print(first_3_F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 1 1 1 1 1 2 2 2 3 2 2 2 2 2 2 1 1 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "num_F = None\n",
+    "num_F = np.sum(first_3_F, axis=1)\n",
     "print(num_F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "F_2plus = None\n",
+    "F_2plus = np.sum(num_F>1)\n",
     "print(F_2plus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_F_2plus = None\n",
+    "prob_F_2plus = (F_2plus/len(sample_mf))\n",
     "print(prob_F_2plus)"
    ]
   },
@@ -638,13 +811,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None"
+    "np.sum((sample_mf[:,4:]== ['M','M']).all(axis=1))/sample_length\n"
    ]
   },
   {
@@ -691,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
